syntax = "proto3";

package vbee.stt.v1;

service SttService {
  rpc Recognize (stream StreamingRecognitionRequest) returns (RecognitionResponse) {}
  rpc StreamingRecognize (stream StreamingRecognitionRequest) returns (stream StreamingRecognitionResponse) {}
}

message StreamingRecognitionRequest {
  oneof streaming_request {
    RecognitionConfig config = 1;
    bytes audio_content = 2;
  }
}

message RecognitionConfig {
  RecognitionSpec specification = 1;
}

message RecognitionSpec {
  string model = 1;
  bool record = 2;
  bool partial_results = 3;
  bool single_utterance = 4;
  bool interim_results = 5;
  Config config_audio = 6;
}

message RecognitionResponse {
  string text = 1;
  bool received = 2;
}

message StreamingRecognitionResponse {
  string text = 1;
  bool is_final = 2;
}

message SpeechRecognitionChunk {
  repeated SpeechRecognitionAlternative alternatives = 1;
  bool is_final = 2;
  bool end_of_utterance = 3;
}

message SpeechRecognitionAlternative {
  string text = 1;
  float confidence = 2;
}

message Config {
  string encoding = 1;
  string max_alternatives = 2;
  string session_id = 3;
  int32 sample_rate_hertz = 4;
}
